--- a/dev/scss/contact.scss
+++ b/dev/scss/contact.scss
@@ -62,6 +62,7 @@
           @media screen and (max-width: 980px) {
             width: 100%;
             margin-left: 5%;
+            border-right: 0px solid #e1e1e1;
           }
           &_text {
             font-family: Ubuntu-Regular;
