--- a/dev/scss/header.scss
+++ b/dev/scss/header.scss
@@ -87,7 +87,7 @@
         background-color: $header-orange-color;
         color: $white-color;
         border-radius: 5px;
-        margin: 29px 0;
+        margin: 29px 8px;
       }
     }
     .search {
